tests/rosetta/out/Smalltalk/animation.out
/tmp/animation.st:9: parse error, expected ']'
