tests/rosetta/out/Smalltalk/animation.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| clicks frames i idx inc line msg shift |
msg := 'Hello World! '.
shift := 0.
inc := 1.
clicks := 0.
frames := 0.
[(clicks < 5)] whileTrue: [
  line := ''.
  i := 0.
  [(i < (msg size))] whileTrue: [
    idx := ((shift + i) % (msg size)).
    line := (line + msg at: idx).
    i := (i + 1).
  ]
  .
  Transcript show: (line) printString; cr.
  shift := ((shift + inc) % (msg size)).
  frames := (frames + 1).
  (((frames % (msg size)) = 0)) ifTrue: [
    inc := ((msg size) - inc).
    clicks := (clicks + 1).
  ] .
]
.
